<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.RegisterActivity"
    android:paddingHorizontal="10dp"
    android:paddingVertical="14dp"
    android:background="@color/main_background">

    <TextView
        android:id="@+id/tittle_register_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Đăng kí"
        android:textAppearance="@style/big_tittle_dark_bold"
        android:gravity="center"
        android:layout_marginTop="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/tittle_register_layout"
        android:layout_marginTop="40dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="5dp"
                app:boxStrokeWidth="0dp"
                android:background="@color/white"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_firstname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/register_edt"
                    android:paddingHorizontal="8dp"
                    android:hint="@string/firstname"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                app:boxStrokeWidth="0dp"
                android:background="@color/white">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_lastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/register_edt"
                    android:paddingHorizontal="8dp"
                    android:hint="@string/lastname"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            app:boxStrokeWidth="0dp"
            android:background="@color/white"
            android:layout_marginTop="10dp"
            android:layout_marginStart="0dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/register_edt"
                android:paddingHorizontal="8dp"
                android:hint="@string/phoneNumber"/>
        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/radio_group_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <RadioButton
                    android:id="@+id/radiobt_female"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/female"
                    android:layout_marginStart="70dp"
                    />

                <RadioButton
                    android:id="@+id/radiobt_male"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/male"
                    android:layout_marginStart="20dp"/>
            </LinearLayout>
        </RadioGroup>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_bt"
            android:text="@string/register"
            android:textAppearance="@style/normal_tittle_light"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:paddingHorizontal="30dp"/>
    </LinearLayout>

</RelativeLayout>