<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/main_background">
<!--task bar-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="176dp"
        android:background="@drawable/taskbar_background"
        android:paddingHorizontal="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="54dp"
            android:orientation="horizontal"
            android:paddingHorizontal="5dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/avatar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@color/text_color_light"
                android:src="@drawable/ic_baseline_person_24"
                app:shapeAppearanceOverlay="@style/circle_image" />

            <LinearLayout
                android:id="@+id/name_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:paddingHorizontal="10dp"
                android:layout_toRightOf="@id/avatar"
                android:layout_marginLeft="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="xin chào"
                    android:textAppearance="@style/small_tittle_light" />

                <TextView
                    android:id="@+id/tv_name_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="Vu Danh hung"
                    android:maxWidth="150dp"
                    android:maxLines="1"
                    android:textAppearance="@style/normal_tittle_light" />
            </LinearLayout>

            <ru.nikartm.support.ImageBadgeView
                android:id="@+id/notifycation"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_baseline_notifications_24"
                android:tint="@color/text_color_light"
                android:layout_alignParentEnd="true"/>


        </RelativeLayout>
    </RelativeLayout>
<!--rank-->
    <RelativeLayout
        android:id="@+id/section_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="14dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="125dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/layout_component">
        <TextView
            android:id="@+id/tv_rank_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hang thanh vien: Bac"
            android:textAppearance="@style/normal_tittle_dark"
            />

        <TextView
            android:id="@+id/tv_rank_point_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1000"
            android:textAppearance="@style/small_tittle_dark"
            android:layout_alignParentEnd="true"
            />
        
        <ProgressBar
            android:id="@+id/rank_progess_home"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_alignTop="@id/tv_rank_home"
            android:layout_marginTop="40dp"
            android:paddingHorizontal="10dp"
            android:progress="50"
            android:progressDrawable="@drawable/progress_bar"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/rank_progess_home"
            android:layout_marginTop="50dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">
                <LinearLayout
                    android:id="@+id/action_gift_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:stateListAnimator="@drawable/press_animation">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/icons8_gift_48"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/gift"
                        android:textAppearance="@style/action_tittle_dark"
                        android:layout_gravity="center_horizontal"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/action_qr_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:stateListAnimator="@drawable/press_animation">>

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/icons8_qr_code_64"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/qr"
                        android:textAppearance="@style/action_tittle_dark"
                        android:layout_gravity="center_horizontal"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/action_call_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:stateListAnimator="@drawable/press_animation">>

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/icons8_call_64"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/qr"
                        android:textAppearance="@style/action_tittle_dark"
                        android:layout_gravity="center_horizontal"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:weightSum="3">
                <LinearLayout
                    android:id="@+id/action_reservation_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:stateListAnimator="@drawable/press_animation">>

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/icons8_reservation_64"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/reservation"
                        android:textAppearance="@style/action_tittle_dark"
                        android:layout_gravity="center_horizontal"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/action_order_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:stateListAnimator="@drawable/press_animation">>

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/icons8_order_food_58"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/order"
                        android:textAppearance="@style/action_tittle_dark"
                        android:layout_gravity="center_horizontal"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/action_location_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:stateListAnimator="@drawable/press_animation">>

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/icons8_place_marker_80"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/place_maker"
                        android:textAppearance="@style/action_tittle_dark"
                        android:layout_gravity="center_horizontal"/>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>
<!--action-->
    <RelativeLayout
        android:id="@+id/intro_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/section_1"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/layout_component"
        android:padding="14dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/intro_recycle_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

</RelativeLayout>